jenkins-deployment/blue.yml
apiVersion: v1
kind: Pod
metadata:
   name: blue
spec:
   containers:
   - name: blue-container01
     image: mshmsudd/flask-app:latest
     ports:
     - containerPort: 8080
