jenkins-deployment/jenkins-green-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
  - port: 8079
    targetPort: 8080
    nodePort: 30000
  selector:
    app: jenkins
